methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:1: error: ')' expected but ';' found.
override def run() {avance();b(Color.red;Color.blue;Color.green;Color.yellow)
                                        ^PatternPicture:1: error: ';' expected but ')' found.
override def run() {avance();b(Color.red;Color.blue;Color.green;Color.yellow)
                                                                            ^