methods.picture.PatternPicture.scala.code
override def run() {avance();b(Color.red;Color.blue;Color.green;Color.yellow)
}


def b(c:Color,d:Color,e:Color,f:Color) {setCouleurBrosse(c);a();gauche();avance();gauche();avance();a()}
def a(){baisseBrosse();leveBrosse()}

def c(){}


